style: fix review issues (null annotations, List.of, assertEquals, method reference)